https://github.com/bamplee/chomi/issues/10 검색결과 collapse 탭 추가

--- a/ui/src/components/summary/summary.css
+++ b/ui/src/components/summary/summary.css
@@ -10,6 +10,7 @@
 
 .summary_route_table {
     padding-left: 10px;
+    padding-right: 10px;
 }
 
 .summary_route_table .header {
